Promote to stage environment

--- a/components/go-nqavslyx/overlays/stage/deployment-patch.yaml
+++ b/components/go-nqavslyx/overlays/stage/deployment-patch.yaml
@@ -12,5 +12,5 @@ spec:
   template: 
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
+      - image: nexus-docker-nexus.apps.rosa.rhtap-services.xmdt.p3.openshiftapps.com/rhtap/go-nqavslyx:github-618ad70f8da4e1025595b46c2e678678bbfe0f94
         name: container-image  
